style: FRONTEND: fix elements overflow

--- a/frontend/src/style/app.css
+++ b/frontend/src/style/app.css
@@ -4,13 +4,18 @@ body {
   color: white;
   font-family: var(--general-font);
   font-size: 0.9rem;
-}
 
+  overflow-y: hidden;
+  width: max-content;
+}
 
 .main-grid {
   background-color: rgb(46, 60, 73);
-  display: grid;
+
   height: 100vh;
+  width: 100vw;
+  
+  display: grid;
   grid-template: 40px auto / 300px auto;
   grid-template-areas: 
     "header header"
@@ -30,7 +35,8 @@ body {
 .left-bar {
   background-color: rgb(63, 63, 80);
   width: 300px;
-  grid-area: left-bar
+  grid-area: left-bar;
+  overflow: auto;
 }
 
 .left-bar > * {
@@ -133,6 +139,7 @@ body {
 .extra-info {
   grid-area: extra-info;
   background-color: rgb(108, 160, 31);
+  overflow: auto;
 }
 
 .network-requests {
